# vtop-engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  docker-compose.observability.yml  docker-compose.yml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: .gitignore  README.md  docker-compose.benchmark.yml  pytest.ini  requirements.txt  ruff.toml  run_benchmark.py  run_matrix.py
benchmarks/lib/: __init__.py  engine.py  metrics.py  scenario.py  seed.py  sysmon.py
benchmarks/scenarios/: 01-small-jsonl-gzip.yaml  02-medium-cef-zstd.yaml  03-mixed-none.yaml  04-batch-by-bytes.yaml  05-fault-replay.yaml  06-longrun-5min.yaml  07-backend-minio-jsonl.yaml  08-blake3-jsonl.yaml  09-checksum-disabled.yaml  10-binary-localfs.yaml
benchmarks/tests/: test_matrix_sweep.py  test_metrics.py  test_scenario.py  test_scenario_yaml.py  test_seed_cleanup.py
crates/vtop-adapters/: Cargo.toml
crates/vtop-adapters/src/: base.rs  file_source.rs  kafka_source.rs  lib.rs  syslog_spool_source.rs
crates/vtop-broker/: Cargo.toml
crates/vtop-broker/examples/: soak.rs
crates/vtop-broker/src/: lib.rs  replication.rs
crates/vtop-broker/tests/: consumer_group_checkpoints.rs  epoch_journal_crash_sweep.rs  meta_lease_fencing.rs  quorum_replication.rs
crates/vtop-cli/: Cargo.toml
crates/vtop-cli/src/: commands.rs  engine.rs  lib.rs  main.rs  meta_tools.rs  metrics_server.rs  segment_tools.rs  testkit.rs
crates/vtop-cli/tests/: integration_metrics_endpoint.rs  segment_tools_verify.rs
crates/vtop-core/: Cargo.toml
crates/vtop-core/src/: batch.rs  checksum.rs  compression.rs  config.rs  detect.rs  errors.rs  lib.rs  manifest.rs  metrics.rs  partitioning.rs  replay.rs  state_machine.rs  telemetry.rs  types.rs  work_dir.rs
crates/vtop-core/tests/: kat_checksums.rs  prop_framing.proptest-regressions  prop_framing.rs  prop_state_machine.rs  snapshot_manifest.rs
crates/vtop-core/tests/snapshots/: snapshot_manifest__authenticated_kafka_manifest.snap  snapshot_manifest__file_manifest.snap  snapshot_manifest__kafka_manifest.snap  snapshot_manifest__kafka_manifest_self_hash.snap
crates/vtop-log/: Cargo.toml
crates/vtop-log/src/: catalog.rs  codec.rs  codec_v2.rs  env.rs  lib.rs  proof.rs  segment.rs  sim.rs  types.rs  verify.rs
crates/vtop-log/tests/: sim_crash_sweep.rs  startup_crash_matrix.rs
crates/vtop-meta/: Cargo.toml
crates/vtop-meta/src/: command.rs  keys.rs  lib.rs  placement.rs  state.rs  wire.rs
crates/vtop-meta/src/raft/: consensus.rs  convert.rs  log_store.rs  mod.rs  network.rs  state_machine.rs  store.rs  type_config.rs
crates/vtop-meta/src/storage/: applied.rs  hardstate.rs  log.rs  membership_log_id.rs  mod.rs  purged.rs  snapshot.rs
crates/vtop-meta/src/transport/: admin.rs  mod.rs  peer.rs  tls.rs  wire.rs
crates/vtop-meta/tests/: codec_golden.rs  openraft_containment.rs  raft_adapter_durability.rs  raft_three_node.rs  recovery_e2e.rs  state_machine_matrix.rs  storage_crash_sweep.rs
crates/vtop-protocol/: Cargo.toml
crates/vtop-protocol/src/: lib.rs
crates/vtop-state/: Cargo.toml
crates/vtop-state/migrations/postgres/: 0001_state_store.sql
crates/vtop-state/src/: lib.rs  models.rs  pg_store.rs  sqlite_store.rs  store.rs  test_battery.rs
crates/vtop-state/tests/: pg_battery.rs
crates/vtop-upload/: Cargo.toml
crates/vtop-upload/src/: awscli_backend.rs  base.rs  command.rs  lib.rs  localfs_backend.rs  minio_backend.rs  mock.rs  s3_native.rs  s3cmd_backend.rs
crates/vtop-upload/tests/: live_s3_verification.rs
docker/: Dockerfile  entrypoint.sh  load-generator.sh  seed-events.sh
docker/tests/: load-generator.bats  seed-events.bats
docs/: ARCHITECTURE.md  INVENTION_DISCLOSURE_DRAFT.md  NATIVE_BROKER_ARCHITECTURE.md  POSTGRES_DEPLOYMENT.md  PRIOR_ART_SEARCH_PLAN.md  PRODUCTION_HA_PLAN.md  PRODUCTION_HA_ROADMAP.md  README.md  SECURITY_MODEL.md  VTOP_PROTOCOL_DRAFT.md
examples/: config.yaml  streams.yaml
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/detect_batch/: cef.seed  jsonl.seed
fuzz/corpus/detect_record/: cef.seed  json.seed  leef.seed  raw.seed  syslog.seed
fuzz/corpus/manifest_parse/: valid.seed
fuzz/fuzz_targets/: detect_batch.rs  detect_record.rs  manifest_parse.rs
observability/: PIPELINE_DIAGRAM.md  README.md  build-dashboards.py  dashboards_common.py  dashboards_flow.py  dashboards_kafka.py  dashboards_pipeline.py  dashboards_vtop.py  seed-dashboards.sh  validate-dashboards.py
observability/alloy/: config.alloy
observability/grafana/dashboards/: vtop-engine.json  vtop-flow-drawio.json  vtop-kafka.json  vtop-logs.json  vtop-minio.json  vtop-overview.json  vtop-pipeline-flow.json  vtop-pipeline.json  vtop-safety.json
observability/grafana/flow/: vtop-flow-panelconfig.yaml
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
observability/loki/: loki.yaml
observability/mimir/: mimir.yaml
observability/tempo/: tempo.yaml
scripts/: e2e-smoke.sh
tests/: integration_file_to_minio.rs  integration_kafka_to_minio.rs  integration_manifest_rollback.rs  integration_replay.rs  integration_state_recovery.rs
