[workspace]
resolver = "2"
members = [
  "crates/vtop-core",
  "crates/vtop-adapters",
  "crates/vtop-upload",
  "crates/vtop-state",
  "crates/vtop-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# MSRV: the floor is set by the aws-sdk crates, which declare rust-version
# 1.91.1. Verified by a CI job that builds on exactly this toolchain, so the
# number is a tested promise rather than an aspiration.
rust-version = "1.91.1"
license = "MIT"
authors = ["VTOP Engine contributors"]
description = "Verified Telemetry Object Protocol Engine — a replay-safe, manifest-driven telemetry object transfer engine (prototype / reference implementation)."

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
# Metrics: the `prometheus` crate is a pure-Rust registry/encoder with no C
# deps, and `hyper` already sits in the tree via the aws-sdk, so exposing
# /metrics costs no new heavy dependency.
prometheus = { version = "0.13", default-features = false }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
rdkafka = { version = "0.39", features = ["cmake-build", "ssl", "sasl"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
sha2 = "0.11"
blake3 = "1"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
zstd = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
glob = "0.3"
notify = "8"
tempfile = "3"
proptest = "1"
insta = { version = "1", features = ["json"] }
bytes = "1"
futures = "0.3"
regex = "1"

# Internal crates
# Internal crates carry an explicit `version` alongside `path`: cargo uses the
# path locally, and the version is what a published crate would resolve. Without
# it these are wildcard dependencies, which crates.io rejects outright - so the
# workspace could not actually be published as declared.
vtop-core = { path = "crates/vtop-core", version = "0.1.0" }
vtop-adapters = { path = "crates/vtop-adapters", version = "0.1.0" }
vtop-upload = { path = "crates/vtop-upload", version = "0.1.0" }
vtop-state = { path = "crates/vtop-state", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true        # drop symbols → smaller binary / container image
codegen-units = 1   # better optimization (slightly slower build)
