[package]
name = "vtop-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
vtop-core = { path = "../crates/vtop-core" }

[[bin]]
name = "detect_record"
path = "fuzz_targets/detect_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "detect_batch"
path = "fuzz_targets/detect_batch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_parse"
path = "fuzz_targets/manifest_parse.rs"
test = false
doc = false
bench = false

# Detach from the parent workspace: cargo-fuzz builds this crate on its own with
# instrumentation flags that must not touch the main workspace build.
[workspace]
