[package]
name = "vtop-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "VTOP Engine runtime and the `vtopctl` command-line interface."

[lib]
name = "vtop_cli"
path = "src/lib.rs"

[[bin]]
name = "vtopctl"
path = "src/main.rs"

[features]
default = ["kafka"]
# Kafka is a compatibility/source adapter, not a native broker dependency.
kafka = ["vtop-adapters/kafka", "dep:rdkafka"]
# Keep PostgreSQL optional in the CLI while providing a discoverable feature
# for production builds and the separate `vtopctl migrate` deployment step.
postgres = ["vtop-state/postgres"]

[dependencies]
blake3 = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
hyper = { workspace = true }
vtop-core = { workspace = true }
vtop-log = { workspace = true }
vtop-meta = { workspace = true }
vtop-adapters = { workspace = true, default-features = false }
vtop-upload = { workspace = true }
vtop-state = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
rdkafka = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

# Integration tests live in the repo-root tests/ directory and are compiled as
# integration tests of this package.
[[test]]
name = "integration_file_to_minio"
path = "../../tests/integration_file_to_minio.rs"

[[test]]
name = "integration_replay"
path = "../../tests/integration_replay.rs"

[[test]]
name = "integration_state_recovery"
path = "../../tests/integration_state_recovery.rs"

[[test]]
name = "integration_manifest_rollback"
path = "../../tests/integration_manifest_rollback.rs"

[[test]]
name = "integration_kafka_to_minio"
path = "../../tests/integration_kafka_to_minio.rs"
required-features = ["kafka"]

[[test]]
name = "integration_metrics_endpoint"
path = "tests/integration_metrics_endpoint.rs"
