[package]
name = "vtop-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Protocol-independent engine logic for the VTOP Engine (state machine, batch, manifest, checksum, compression, partitioning, replay)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# async KAT tests hash from files (the path uploads actually use)
tokio = { workspace = true }
proptest = { workspace = true }
# snapshot tests pin the manifest's on-disk contract
insta = { workspace = true }
# integration tests decompress objects to assert byte-exact round trips
flate2 = { workspace = true }
