[package]
name = "vtop-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Kafka-independent, single-node segmented log storage for the native VTOP broker."

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
