[package]
name = "vtop-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded, versioned wire protocol for the native VTOP broker."

[dependencies]
blake3 = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", default-features = false, features = ["io-util"] }
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "rt",
] }
