[package]
name = "vtop-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Replay-safe state store for the VTOP Engine (SQLite via sqlx)."

[features]
# Exposes the backend-agnostic `test_battery` module to other crates (e.g. a
# Postgres integration test). In-crate tests get it automatically via cfg(test).
test-support = []
# The Postgres-compatible backend (Phase 3), for an HA fleet sharing one durable
# ledger. Off by default so the single-node SQLite build pulls no Postgres deps.
postgres = ["sqlx/postgres"]

[dependencies]
vtop-core = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# The Postgres battery test needs the postgres backend AND the shared battery.
[[test]]
name = "pg_battery"
required-features = ["postgres", "test-support"]
